# leaves

./: Cargo.toml  README.md  flake.nix  package.nix  shell.nix
.github/workflows/: release.yml
src/: app.rs  cli.rs  colors.rs  config.rs  core.rs  explorer.rs  forest.rs  main.rs  navtree.rs  render.rs  scanfs.rs  state.rs  util.rs
