[package]
name = "leaves"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = { version = "3.6.1", optional = true, features = [
  "wayland-data-control",
] }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
colorous = "1.0.16"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
either = "1.16.0"
eyre = "0.6.12"
humansize = "2.1.3"
ignore = "0.4.26"
itertools = "0.15.0"
ouroboros = "0.18.5"
ratatui = "0.30.2"
rayon = "1.12.0"
smallvec = "1.15.2"
thousands = "0.2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "fmt",
  "json",
  "registry",
] }
tui-tree-widget = "0.24.0"

[profile.perf]
inherits = "release"
debug = true         # Full debug info for symbols
strip = false        # Don't strip symbols

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]
